# mailwright

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Caddyfile  Dockerfile  LICENSE  README.md  SECURITY.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
docs/: ARCHITECTURE.md  DEPLOY.md  SETUP.md  TOOL_DESIGN.md
docs/superpowers/specs/: 2026-06-30-mail-jira-agent-design.md
spikes/: owa_probe.py
src/mailwright/: cli.py  config.py  container.py  crypto.py  models.py
src/mailwright/agent/: formatting.py  prompts.py  service.py
src/mailwright/brain/: attachment_gate.py  attachment_loader.py  classifier.py  drafter.py  llm.py  schemas.py  triage.py
src/mailwright/db/: connection.py  schema.py
src/mailwright/ingest/: extract.py
src/mailwright/jira/: adf.py  client.py  models.py  ticket_service.py
src/mailwright/memory/: context.py  embedder.py  feedback.py  manager.py  vector_store.py
src/mailwright/owa/: replies.py  rest_client.py  session.py  state_store.py
src/mailwright/pipeline/: answer_service.py  approval_service.py  deletion_service.py  interfaces.py  message_service.py  nudge_service.py  reflection_service.py  replier.py  reply_service.py  service.py  status_service.py  summary_service.py  uploader.py
tests/: conftest.py  test_adf.py  test_answer_service.py  test_approval_repo.py  test_approval_service.py  test_attachment_gate.py  test_attachment_loader.py  test_bot.py  test_card.py  test_classifier.py  test_cli.py  test_commands_base.py  test_config.py  test_container.py  test_crypto.py  test_deletion_service.py  test_dispatch.py  test_drafter.py  test_embedder.py  test_episodic_repo.py  test_extract.py  test_feedback.py  test_formatting.py  test_jira_client.py  test_jira_models.py  test_key_detector.py  test_llm.py  test_mail_poller.py  test_markup.py  test_memory_context.py  test_message_service.py  test_notifier.py  test_nudge_service.py  test_owa_session.py  test_owa_state_store.py  test_pipeline_service.py  test_poll_failure_text.py  test_poll_state_repo.py  test_processed_mails_repo.py  test_reflection_service.py  (+22 more)
tests/agent/: conftest.py  test_service.py  test_tools_jira.py  test_tools_mail.py  test_tools_memory.py
(+37 files in other folders)
